objects/DSR_Opportunity_Detail__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>DSR Opportunity Details (Account)</relationshipLabel>
        <relationshipName>DSR_Opportunity_Details1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BusinessPartner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sold To/Business Partner</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>DSR Opportunity Details</relationshipLabel>
        <relationshipName>DSR_Opportunity_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Close_Date__c</fullName>
        <label>Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Deal_Support__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Deal Support</label>
        <referenceTo>Deal_Support__c</referenceTo>
        <relationshipLabel>DSR Opportunity Details</relationshipLabel>
        <relationshipName>DSR_Opportunity_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Direct_Indirect_Sale__c</fullName>
        <label>Direct/Indirect Sale</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Direct</fullName>
                </value>
                <value>
                    <fullName>Indirect</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lead_Offer__c</fullName>
        <description>DL 1/16/19 Requested to update label only to Lead Platform</description>
        <label>Lead Platform</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Lead_Offer</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Opportunity_Currency__c</fullName>
        <label>Opportunity Currency</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>AUD</fullName>
                    <label>Australian Dollar</label>
                </value>
                <value>
                    <fullName>BRL</fullName>
                    <label>Brazilian Real</label>
                </value>
                <value>
                    <fullName>GBP</fullName>
                    <label>British Pound</label>
                </value>
                <value>
                    <fullName>CAD</fullName>
                    <label>Canadian Dollar</label>
                </value>
                <value>
                    <fullName>Euro</fullName>
                </value>
                <value>
                    <fullName>JPY</fullName>
                    <label>Japanese Yen</label>
                </value>
                <value>
                    <fullName>NZD</fullName>
                    <label>New Zealand Dollar</label>
                </value>
                <value>
                    <fullName>SGD</fullName>
                    <label>Singapore Dollar</label>
                </value>
                <value>
                    <fullName>ZAR</fullName>
                    <label>South African Rand</label>
                </value>
                <value>
                    <fullName>USD</fullName>
                    <label>U.S. Dollar</label>
                </value>
                <value>
                    <fullName>VEF</fullName>
                    <label>Venezuelan Bolivar Fuerte</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Opportunity_Name__c</fullName>
        <label>Opportunity Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Source__c</fullName>
        <label>Opportunity Source</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Partner Registered Opportunity</fullName>
                </value>
                <value>
                    <fullName>Partner Registered Lead</fullName>
                </value>
                <value>
                    <fullName>Partner Sourced not registered</fullName>
                </value>
                <value>
                    <fullName>Partner/Marketing</fullName>
                </value>
                <value>
                    <fullName>Marketing Sourced</fullName>
                </value>
                <value>
                    <fullName>Sales Sourced - Existing Customer Relationship</fullName>
                </value>
                <value>
                    <fullName>Sales Sourced - Outbound Cold Call or Email</fullName>
                </value>
                <value>
                    <fullName>Sales Sourced - Connected via LinkedIn or Social Networks</fullName>
                </value>
                <value>
                    <fullName>Sales Sourced - Connected at a Conference</fullName>
                </value>
                <value>
                    <fullName>Sales Sourced - Account Contacted Genesys Sales Directly</fullName>
                </value>
                <value>
                    <fullName>Sales Sourced - Referral from an Internal Customer Sponsor</fullName>
                </value>
                <value>
                    <fullName>Sales Sourced - Referred by Another Customer</fullName>
                </value>
                <value>
                    <fullName>Sales Sourced - Business Development Rep</fullName>
                </value>
                <value>
                    <fullName>Sales Sourced - Customer Success Manager</fullName>
                </value>
                <value>
                    <fullName>Sales Sourced – RFP</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>DSR Opportunity Details</relationshipLabel>
        <relationshipName>DSR_Opportunity_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Primary_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Primary Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>DSR Opportunity Details</relationshipLabel>
        <relationshipName>DSR_Opportunity_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sold_To_Country__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sold To Country</label>
        <referenceTo>Country__c</referenceTo>
        <relationshipLabel>DSR Opportunity Details</relationshipLabel>
        <relationshipName>DSR_Opportunity_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Stage__c</fullName>
        <label>Stage</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1.Understand Needs</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>recordtype__c</fullName>
        <description>test</description>
        <label>recordtype</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>DSR Opportunity Detail</label>
    <nameField>
        <label>Opportunity Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>DSR Opportunity Details</pluralLabel>
    <recordTypes>
        <fullName>Transnational_Help_Admin</fullName>
        <active>true</active>
        <label>Transnational Help Admin</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>